# budget_manager_rs

./: Cargo.toml  README.md  database_structure.md
src/: app.rs  events.rs  main.rs  manager.rs  tui.rs  ui.rs  update.rs
src/app/: NewTransaction.rs  categories_list.rs  category_selection.rs  date_list.rs  mod.rs  new_transaction.rs  transactions_list.rs
src/ui/: categories_list_screen.rs  category_selection_screen.rs  date_list_screen.rs  mod.rs  new_transaction_screen.rs  transaction_list_screen.rs
src/update/: categories_list_screen.rs  category_selection_screen.rs  date_list_screen.rs  mod.rs  new_transaction_screen.rs  transaction_list_screen.rs
