[package]
name = "budget_manager_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
crossterm = "0.27.0"
numfmt = "1.1.1"
ratatui = "0.26.1"
rusqlite = "0.30.0"
simple-home-dir = "0.3.2"
tui-textarea = "0.4.0"
